fixes and additions
