# pkg/api/booking/v1/service.pb.validate.go
@@ -1,0 +1,244 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/booking/v1/service.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on BookingTrainingRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *BookingTrainingRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on BookingTrainingRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// BookingTrainingRequestMultiError, or nil if none found.
+func (m *BookingTrainingRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *BookingTrainingRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for TrainingId
+
+	// no validation rules for UserId
+
+	if len(errors) > 0 {
+		return BookingTrainingRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// BookingTrainingRequestMultiError is an error wrapping multiple validation
+// errors returned by BookingTrainingRequest.ValidateAll() if the designated
+// constraints aren't met.
+type BookingTrainingRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m BookingTrainingRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m BookingTrainingRequestMultiError) AllErrors() []error { return m }
+
+// BookingTrainingRequestValidationError is the validation error returned by
+// BookingTrainingRequest.Validate if the designated constraints aren't met.
+type BookingTrainingRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e BookingTrainingRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e BookingTrainingRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e BookingTrainingRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e BookingTrainingRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e BookingTrainingRequestValidationError) ErrorName() string {
+	return "BookingTrainingRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e BookingTrainingRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sBookingTrainingRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = BookingTrainingRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = BookingTrainingRequestValidationError{}
+
+// Validate checks the field values on BookingTrainingResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *BookingTrainingResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on BookingTrainingResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// BookingTrainingResponseMultiError, or nil if none found.
+func (m *BookingTrainingResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *BookingTrainingResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return BookingTrainingResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// BookingTrainingResponseMultiError is an error wrapping multiple validation
+// errors returned by BookingTrainingResponse.ValidateAll() if the designated
+// constraints aren't met.
+type BookingTrainingResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m BookingTrainingResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m BookingTrainingResponseMultiError) AllErrors() []error { return m }
+
+// BookingTrainingResponseValidationError is the validation error returned by
+// BookingTrainingResponse.Validate if the designated constraints aren't met.
+type BookingTrainingResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e BookingTrainingResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e BookingTrainingResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e BookingTrainingResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e BookingTrainingResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e BookingTrainingResponseValidationError) ErrorName() string {
+	return "BookingTrainingResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e BookingTrainingResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sBookingTrainingResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = BookingTrainingResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = BookingTrainingResponseValidationError{}
