# pkg/api/booking/v1/service_grpc.pb.go
@@ -1,0 +1,109 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v6.31.1
+// source: api/booking/v1/service.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	BookingService_BookTraining_FullMethodName = "/booking.v1.BookingService/BookTraining"
+)
+
+// BookingServiceClient is the client API for BookingService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type BookingServiceClient interface {
+	BookTraining(ctx context.Context, in *BookingTrainingRequest, opts ...grpc.CallOption) (*BookingTrainingResponse, error)
+}
+
+type bookingServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewBookingServiceClient(cc grpc.ClientConnInterface) BookingServiceClient {
+	return &bookingServiceClient{cc}
+}
+
+func (c *bookingServiceClient) BookTraining(ctx context.Context, in *BookingTrainingRequest, opts ...grpc.CallOption) (*BookingTrainingResponse, error) {
+	out := new(BookingTrainingResponse)
+	err := c.cc.Invoke(ctx, BookingService_BookTraining_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// BookingServiceServer is the server API for BookingService service.
+// All implementations must embed UnimplementedBookingServiceServer
+// for forward compatibility
+type BookingServiceServer interface {
+	BookTraining(context.Context, *BookingTrainingRequest) (*BookingTrainingResponse, error)
+	mustEmbedUnimplementedBookingServiceServer()
+}
+
+// UnimplementedBookingServiceServer must be embedded to have forward compatible implementations.
+type UnimplementedBookingServiceServer struct {
+}
+
+func (UnimplementedBookingServiceServer) BookTraining(context.Context, *BookingTrainingRequest) (*BookingTrainingResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method BookTraining not implemented")
+}
+func (UnimplementedBookingServiceServer) mustEmbedUnimplementedBookingServiceServer() {}
+
+// UnsafeBookingServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to BookingServiceServer will
+// result in compilation errors.
+type UnsafeBookingServiceServer interface {
+	mustEmbedUnimplementedBookingServiceServer()
+}
+
+func RegisterBookingServiceServer(s grpc.ServiceRegistrar, srv BookingServiceServer) {
+	s.RegisterService(&BookingService_ServiceDesc, srv)
+}
+
+func _BookingService_BookTraining_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(BookingTrainingRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BookingServiceServer).BookTraining(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BookingService_BookTraining_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BookingServiceServer).BookTraining(ctx, req.(*BookingTrainingRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// BookingService_ServiceDesc is the grpc.ServiceDesc for BookingService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var BookingService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "booking.v1.BookingService",
+	HandlerType: (*BookingServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "BookTraining",
+			Handler:    _BookingService_BookTraining_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/booking/v1/service.proto",
+}
